change new line

--- a/triangle/index.html
+++ b/triangle/index.html
@@ -160,7 +160,8 @@
     window.sr = ScrollReveal();
         sr.reveal('.navbar', {
             duration : 2000,
-            origin: 'bottom'
+            origin: 'bottom',
+             distance: '100px'
         });
         sr.reveal('.showcase-left', {
             duration : 2000,
