--- a/triangle_new/index.html
+++ b/triangle_new/index.html
@@ -149,6 +149,7 @@
     </section>
     <footer>
     <p class="text-center">Triangle copyright &copy; 2017</p>
+        <p class="text-center graphics" >Graphics Made with:<a style="text-decoration:none" href="https://logomakr.com" target="_blank">LogoMakr.com</a></p>
     </footer>
 <!--    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>-->
     <script
