change new line

--- a/triangle_new/index.html
+++ b/triangle_new/index.html
@@ -63,7 +63,7 @@
     <section id="testimonial">
     <div class="container">
         <p>"Ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit  ." </p>
-        <p class="customer">- Bukola Ayomide</p>
+        <p class="customer">- Banke Oyewo</p>
     </div>
     
     </section>
