add weather icon on h2

--- a/weather/index.html
+++ b/weather/index.html
@@ -10,7 +10,7 @@
 <div class="container">
 	<div class="row ">
 		<div class="col-xs-12 text-center">
-		<h1>Free Code Camp</h1>
+		<h1>Free C<i class="fa fa-sun-o" aria-hidden="true"></i>de Camp</h1>
 		<h2>Weather App</h2>
 	</div>
 	</div>
