update index page

--- a/weather/index.html
+++ b/weather/index.html
@@ -18,10 +18,10 @@
 	<div class="row ">
 		<div class="col-xs-12 text-center box1">
 			<!-- <h3 id="name">Abuja, <span id="country">NG</span></h3>  -->
-			<h3 id="name">Abuja, <span id="country">NG</span></h3> 
-			<h3 id="temp">24</h3>
-			<h3 id="desc">Mist</h3>
-			<h3 id="icon">icon</h3>
+			<h3 id="name" <span id="country"></span></h3> 
+			<h3 id="temp"></h3>
+			<h3 id="desc"></h3>
+			<h3 id="icon"></h3>
 		</div>
 		
 	</div>
