--- a/weather/index.html
+++ b/weather/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Weather</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.3.2/css/weather-icons.min.css">
 	<script src="https://use.fontawesome.com/8a181522cb.js"></script>
     <link rel="stylesheet" href="css/weather.css">
 </head>
@@ -10,7 +11,8 @@
 <div class="container">
 	<div class="row ">
 		<div class="col-xs-12 text-center">
-		<h1>Free C<i class="fa fa-sun-o" aria-hidden="true"></i>de Camp</h1>
+		<!-- <h1>Free C<i class="fa fa-sun-o" aria-hidden="true"></i>de Camp</h1> -->
+		<h1>Free C<i class="wi wi-day-showers"></i>de Camp</h1>
 		<h2>Weather App</h2>
 	</div>
 	</div>
@@ -27,10 +29,6 @@
 	</div>
 	<footer class="text-center">Designed By <b>thinkC</b></footer>
 </div>
-
-
-
-
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
