--- a/weather/index.html
+++ b/weather/index.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="row ">
-		<div class="col-xs-12 text-center box1">
+		<div class="col-xs-12 text-center box1" id="content" >
 			<!-- <h3 id="name">Abuja, <span id="country">NG</span></h3>  -->
 			<h3 id="name" <span id="country"></span></h3> 
 			<h3 id="temp"></h3>
@@ -27,7 +27,10 @@
 		</div>
 		
 	</div>
-	<footer class="text-center">Designed By <b>thinkC</b></footer>
+	<hr class="style1">
+	<!-- <footer class="text-center">Designed By <b>thinkC</b></footer> -->
+	<footer class="text-center"><b>Tunde Oyewo 2018 </b> | <a href="https://github.com/thinkC/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> | <a href="https://twitter.com/tunde_oyewo/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a> | <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></footer>
+
 </div>
 
 
