--- a/weather1/index.html
+++ b/weather1/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.3.2/css/weather-icons.min.css">
 	<script src="https://use.fontawesome.com/8a181522cb.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link rel="stylesheet" href="css/weather.css">
 </head>
 <body>
@@ -12,8 +13,8 @@
 	<div class="row ">
 		<div class="col-xs-12 text-center">
 		<!-- <h1>Free C<i class="fa fa-sun-o" aria-hidden="true"></i>de Camp</h1> -->
-		<h1>Free C<i class="wi wi-day-showers"></i>de Camp</h1>
-		<h2>Weather App</h2>
+		<!-- <h1>Free C<i class="wi wi-day-showers"></i>de Camp</h1> -->
+		<h1>Local Weather App</h1>
 	</div>
 	</div>
 
